# FileSystem-RAG

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
data/books/: 1513.txt  16.txt  3328.txt  76677.txt  76681.txt  76682.txt
file_processors/: file_processor.py  image_file_processor.py  image_file_processor_test.py  text_file_processor.py  text_file_processor_test.py
indexing_and_embedding/: chroma_db_client.py  chroma_db_client_test.py
ingestion/: consumer.py  producer.py
lookup/: lookup.py  lookup_test.py
scripts/: distribute_books.py  download_books.sh
